Fix desktop lobby extra spacing

--- a/src/routes/game/lobby/Lobby.module.css
+++ b/src/routes/game/lobby/Lobby.module.css
@@ -690,7 +690,7 @@ nav {
   .lobbyClass {
     position: fixed;
     top: 0px;
-    bottom: 110px;
+    bottom: var(--sticky-footer-height, 60px);
     overflow-y: hidden;
   }
 
