--- a/src/routes/game/lobby/components/matchups/Matchups.module.css
+++ b/src/routes/game/lobby/components/matchups/Matchups.module.css
@@ -15,7 +15,6 @@
   gap: 0.25rem;
   position: relative;
   z-index: 1001;
-  max-height: calc(100vh - 120px);
   overflow-y: auto;
 }
 
